<resources>
    <string name="app_name">Todo-App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_frg__title_et">Enter title</string>
    <string name="add_frg__note">Enter note</string>
    <string name="list_frg_menu__search">search</string>
    <string name="list_frg_menu__sort_by">Sort by</string>
    <string name="list_frg_menu__priority_high">High priority</string>
    <string name="list_frg_menu__priority_low">Low priority</string>
    <string name="list_frg_menu__priority_medium">Medium priority</string>
    <string name="list_frg_menu__delete_all">Delete All</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
</resources>