<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/list_frg_menu__search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        android:title="@string/list_frg_menu__search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/list_frg_menu__sort_by"
            android:title="@string/list_frg_menu__sort_by">
            <menu>
                <item
                    android:id="@+id/list_frg_menu__priority_high"
                    android:title="@string/list_frg_menu__priority_high" />
                <item
                    android:id="@+id/list_frg_menu__priority_medium"
                    android:title="@string/list_frg_menu__priority_medium" />
                <item
                    android:id="@+id/list_frg_menu__priority_low"
                    android:title="@string/list_frg_menu__priority_low" />
            </menu>
        </item>
    </group>
    <item
        android:id="@+id/list_frg_menu__delete_all"
        android:title="@string/list_frg_menu__delete_all"
        app:showAsAction="never" />
</menu>